--- a/pom.xml
+++ b/pom.xml
@@ -405,7 +405,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.8.1</version>
                     <configuration>
-                        <skipTests>true</skipTests>
+                        <skipTests>false</skipTests>
                         <includes>
                             <include>**/*Test*.*</include>
                             <include>**/*Suite*.*</include>
